# WorkSphere

backend/: .env  .gitignore  main.py  pyproject.toml  test.py
backend/app/: app.py  auth.py  config.py  crud.py  db.py  models.py  payload.json  schemas.py  utils.py
backend/app/routes/: auth.py  employee.py  employees.py  test_routes.py
backend/database/: database.JSON
frontend/pages/: create_employee.html  display_employees.html  index.html
